easypay-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-optimize-ns
  labels:
    name: easypay-namespace
    app: easypay
