postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: infra-optimize-ns
  labels:
    app: easypay
spec:
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
