postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: infra-optimize-ns
  labels:
    name: postgres-service
    app: easypay
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres-pod
    app: easypay
